kubernetes/ghost-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: ghost
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ghost
  template:
    metadata:
      labels:
        service: ghost
    spec:
      containers:
      - name: ghost
        image: scheele/my-ghost:1.0
        ports:
        - containerPort: 2368
          protocol: TCP
      restartPolicy: Always
