kubernetes/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql
  template:
    metadata:
      labels:
        service: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7.12
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-volume
      restartPolicy: Always
      volumes:
      - name: mysql-volume
        gcePersistentDisk:
          pdName: mysql-volume
          fsType: ext4
      #  - name: mysql-volume
      #    emptyDir:
