kubernetes/ghost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ghost
  name: ghost
spec:
  ports:
  - name: "2368"
    port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    service: ghost
